syntax = "proto3";

enum GridNotification {
    Unknown = 0;
    DidCreateBlock = 11;
    DidUpdateBlock = 20;
    DidUpdateRow = 30;
    DidUpdateFields = 40;
    DidUpdateField = 41;
}
